--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,6 +1,8 @@
+
 <div class="products__container" *ngFor="let product of products">
     <div class="product">
-        <a style="font-size: 1.5rem; font-weight: bold;" [title]="product.name + ' details'">
+        <a style="font-size: 1.5rem; font-weight: bold;" [title]="product.name + ' details'"
+        [routerLink]="'/products/' + product.id">
             {{product.name}}
         </a>
 
@@ -13,3 +15,4 @@
         <app-product-alert [product]="product" (notify)="onNotify()"></app-product-alert>
     </div>
 </div>
+
