--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-nav></app-nav>
 <app-product-list></app-product-list>
-<app-product-alert></app-product-alert>
+
+<app-product-detail></app-product-detail>
