just finished cart and shippingPrices

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,7 +1,8 @@
 <nav>
     <h1 class="title">My store</h1>
-    <div class="cart">
-        <i class="uil uil-shopping-cart-alt"></i>
-        Checkout
-    </div>
+    <!-- <div class="cart">
+        <a rounterLink="/cart"><i class="uil uil-shopping-cart-alt">Checkout</i></a>
+    </div> -->
+    <a routerLink="/cart"><i class="uil uil-shopping-cart-alt"></i>Checkout</a>
+    
 </nav>
